# vateir-web-nextgen

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
apps/accounts/: admin.py  backends.py  context_processors.py  decorators.py  models.py  pipeline.py  urls.py  views.py
apps/admin_panel/: urls.py  views.py
apps/api/: auth.py  models.py  registry.py  urls.py  views.py
apps/controllers/: admin.py  apps.py  models.py  position_utils.py  tasks.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/events/: admin.py  models.py  urls.py  views.py
apps/feedback/: admin.py  models.py  urls.py  views.py
apps/notifications/: discord.py  models.py
apps/public/: admin.py  airspace.py  apps.py  models.py  runway.py  tasks.py  urls.py  views.py
apps/tickets/: admin.py  apps.py  email.py  models.py  tasks.py  urls.py  views.py
apps/training/: admin.py  apps.py  models.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py
data/: airspace_polygon.txt
deploy/: backup.sh  install.sh
scripts/: migrate_legacy_data.py
static/js/: app.js
templates/: base.html  base_admin.html  base_dashboard.html
templates/accounts/: login.html  settings.html
templates/admin_panel/: airport_form.html  airports_list.html  api_keys.html  controller_edit.html  controller_profile.html  controllers_list.html  custom_endpoint_form.html  custom_endpoints.html  dev_tools.html  discord_announce.html  discord_bans.html  discord_control_centre.html  discord_media.html  discord_member_lookup.html  (+21 more)
(+90 files in other folders)
